# TP04

./: CMakeLists.txt  HugeUnsignedIntOperator.c  main.c
DataTypes/: DoublyLinkedList.c  DoublyLinkedList.h  DoublyLinkedList.h dans dev_lot2.c  DoublyLinkedList.h dans dev_lot2.h
UseHugeNumber/Operator/: HugeFloatOperator.c  HugeFloatOperator.h  HugeIntOperator.c  HugeIntOperator.h  HugeUnsignedIntOperator.c  HugeUnsignedIntOperator.h
UseHugeNumber/Types/: HugeInt.c
scanhugenumbers/: ShowHugeNumber.c
